# watchcontrol

./: .gitignore  README.md  pyproject.toml
Gadgetbridge/: CHANGELOG.md  build.gradle  flake.nix  renovate.json
Gadgetbridge/GBDaoGenerator/: build.gradle
Gadgetbridge/app/: build.gradle
Gadgetbridge/app/src/main/: AndroidManifest.xml
Gadgetbridge/app/src/main/res/layout/: activity_appinstaller.xml  activity_installer_gpx.xml  item_with_details.xml
Gadgetbridge/app/src/main/res/values/: arrays.xml  (+2 more)
Gadgetbridge/app/src/main/res/values-ar/: strings.xml
Gadgetbridge/app/src/main/res/values-bg/: strings.xml
Gadgetbridge/app/src/main/res/values-ca/: strings.xml
Gadgetbridge/app/src/main/res/values-cs/: strings.xml
Gadgetbridge/app/src/main/res/values-de/: strings.xml
Gadgetbridge/app/src/main/res/values-el/: strings.xml
Gadgetbridge/app/src/main/res/values-en-rGB/: strings.xml
Gadgetbridge/app/src/main/res/values-es/: strings.xml
Gadgetbridge/app/src/main/res/values-et/: strings.xml
Gadgetbridge/app/src/main/res/values-fi/: strings.xml
Gadgetbridge/app/src/main/res/values-fr-rCA/: strings.xml
Gadgetbridge/app/src/test/resources/: TestFitLocationEncoding.fit  TestFitLocationEncoding.txt  TestFitMessageTypeParsing.txt  TestGpxExport.gpx  TestGpxImport.course.fit  gpx-exporter-test-SampleTrack.course.fit  gpx-parser-test-multiple-segments.course.fit
python_research/: .gitignore  pyproject.toml
python_research/src/watchcontrol/: __main__.py  client.py  protocol.py  scanner.py
src/watchcontrol/: __init__.py  __main__.py  client.py  protocol.py
(+211 files in other folders)
