[project]
name = "watchcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "androguard>=4.1.3",
    "bleak>=3.0.1",
]

[project.scripts]
watchcontrol = "watchcontrol.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchcontrol"]
